--- a/image-widget.html
+++ b/image-widget.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <body onload="linkImage()">
-<img src="" id="widget_image" width="300" onclick="linkImage()"/>
+<img src="" id="widget_image" width="300" onclick="linkImage()" class="center" alt="Inspirational Quotes"/>
 <script>
     let index;
     const imagesArr = [
