--- a/image-widget.html
+++ b/image-widget.html
@@ -1,6 +1,13 @@
 <html lang="en">
 <body onload="linkImage()">
-<img src="" id="widget_image" width="300" onclick="linkImage()" class="center" alt="Inspirational Quotes"/>
+<img src="" id="widget_image" width="320" onclick="linkImage()" class="centerImage" alt="Inspirational Quotes"/>
+<style type="text/css">
+.centerImage
+{
+ text-align:center;
+ display:block;
+}
+</style>
 <script>
     let index;
     const imagesArr = [
