--- a/image-widget.html
+++ b/image-widget.html
@@ -1,9 +1,9 @@
-<html lang="en">
-<body onload="linkImage()">
-<img src="" id="widget_image" width="300" onclick="linkImage()"/>
-<script type="text/javascript" src="https://tltechsmart.github.io/notion-widgets/image-widget.js"></script>
-<script>
-  linkImage();
-  </script>
-</body>
+<html lang="&#101;&#110;">&#13;
+<body onload="&#108;&#105;&#110;&#107;&#73;&#109;&#97;&#103;&#101;&#40;&#41;">&#13;
+<img src="" id="&#119;&#105;&#100;&#103;&#101;&#116;&#95;&#105;&#109;&#97;&#103;&#101;" width="&#51;&#48;&#48;" onclick="&#108;&#105;&#110;&#107;&#73;&#109;&#97;&#103;&#101;&#40;&#41;"/>&#13;
+<script type="&#116;&#101;&#120;&#116;&#47;&#106;&#97;&#118;&#97;&#115;&#99;&#114;&#105;&#112;&#116;" src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#116;&#108;&#116;&#101;&#99;&#104;&#115;&#109;&#97;&#114;&#116;&#46;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#105;&#111;&#47;&#110;&#111;&#116;&#105;&#111;&#110;&#45;&#119;&#105;&#100;&#103;&#101;&#116;&#115;&#47;&#105;&#109;&#97;&#103;&#101;&#45;&#119;&#105;&#100;&#103;&#101;&#116;&#46;&#106;&#115;"></script>&#13;
+<script>&#13;
+&#32;&#32;&#108;&#105;&#110;&#107;&#73;&#109;&#97;&#103;&#101;&#40;&#41;&#59;&#13;
+&#32;&#32;</script>&#13;
+</body>&#13;
 </html>
