--- a/image-widget.html
+++ b/image-widget.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <body onload="linkImage()">
 <img src="" id="widget_image" width="300" onclick="linkImage()"/>
-<script type="text/javascript" src="https://tltechsmart.github.io/notion-widgets/image-widget.js"></script>
+<script type="text/javascript" src="image-widget.js"></script>
 <script>
   linkImage();
   </script>
