--- a/image-widget.html
+++ b/image-widget.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <body onload="linkImage()">
-<img src="" id="widget_image" width="300" onclick="linkImage()"/>
+<img alt = "" title = "" src="" id="widget_image" width="300" onclick="linkImage()"/>
 <script type="text/javascript" src="image-widget.js"></script>
 <script>
   linkImage();
