--- a/image-widget.html
+++ b/image-widget.html
@@ -1,6 +1,13 @@
 <html lang="en">
+  <style>
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    </style>
 <body onload="linkImage()">
-<img alt = "" title = "" src="" id="widget_image" width="300" onclick="linkImage()"/>
+<img alt = "" title = "" src="" id="widget_image" style="width:95%" onclick="linkImage()"/>
 <script type="text/javascript" src="image-widget.js"></script>
 <script>
   linkImage();
