--- a/tip-choice-widget.html
+++ b/tip-choice-widget.html
@@ -17,7 +17,7 @@
     }
     </style>
 <body onload="tipImage()">
-<img alt = "" title = "" src="" id="tip_image" style="height:100%"/>
+<img alt = "" title = "" src="" id="tip_image" style="width:100%"/>
 <div class="text-center">
     <img class="button" src="./tip-images/SLEEP.png" style="width:16%" onclick="tipImage('sleep')"/>
     <img class="button" src="./tip-images/NUTRITION.png" style="width:16%" onclick="tipImage('nutrition')"/>
