--- a/tip-choice-widget.html
+++ b/tip-choice-widget.html
@@ -15,7 +15,9 @@
     }
     </style>
 <body onload="tipImage()">
-<img alt = "" title = "" src="" id="tip_image" style="width:100%"/>
+<div class="text-center" style="padding-bottom:5px">
+  <img alt = "" title = "" src="" id="tip_image" style="width:100%"/>
+</div>
 <div class="text-center">
     <img class="button" src="./tip-images/SLEEP.png" style="width:15%" onclick="tipImage('sleep')"/>
     <img class="button" src="./tip-images/NUTRITION.png" style="width:15%" onclick="tipImage('nutrition')"/>
