--- a/image-widget.html
+++ b/image-widget.html
@@ -4,10 +4,12 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
+      width: 98%;
+      aspect-ratio: 1 / 1;
     }
     </style>
 <body onload="linkImage()">
-<img alt = "" title = "" src="" id="widget_image" style="width:95%" onclick="linkImage()"/>
+<img alt = "" title = "" src="" id="widget_image" onclick="linkImage()"/>
 <script type="text/javascript" src="image-widget.js"></script>
 </body>
 </html>
