Update aspect ratio

--- a/tip-widget.html
+++ b/tip-widget.html
@@ -4,10 +4,12 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
+      width: 100%;
+      aspect-ratio: 1280 / 752;
     }
     </style>
 <body onload="tipImage()">
-<img alt = "" title = "" src="" id="tip_image" style="width:95%" onclick="tipImage()"/>
+<img alt = "" title = "" src="" id="tip_image" onclick="tipImage()"/>
 <script type="text/javascript" src="tip-widget.js"></script>
 </body>
 </html>
